overflow x navbar fix

--- a/wisehands/admin/css/admin.css
+++ b/wisehands/admin/css/admin.css
@@ -90,9 +90,9 @@ body {
         padding-left: 0;
         padding-right: 0;
     }
-    .hidden-scrollbar {
-        overflow:auto;
-    }
+    /*.hidden-scrollbar {*/
+        /*overflow:hidden;*/
+    /*}*/
     .card .card-content .card-title {
         font-size: 16px;
     }
@@ -126,9 +126,9 @@ body {
         padding-right: 0;
 
     }
-    .hidden-scrollbar {
-        overflow:auto;
-    }
+    /*.hidden-scrollbar {*/
+        /*overflow:auto;*/
+    /*}*/
     .alignFlexStart {
         align-self: flex-start;
     }
@@ -160,9 +160,9 @@ body {
         padding-right: 0;
 
     }
-    .hidden-scrollbar {
-        overflow:auto;
-    }
+    /*.hidden-scrollbar {*/
+        /*overflow:auto;*/
+    /*}*/
     .analyticsContainer {
         padding-left: 0;
         padding-right: 0;
